[package]
name = "bitreader_async"
version = "0.1.1"
authors = ["Ethan Spurlock <ethan@spurlock.io>"]
edition = "2018"
description = "A reader that extends BufReader to allow per bit reads asynchronously"
license = "MIT"
keywords = ["Read","bit"]
repository = "https://github.com/vectorizer-labs/packattack-derive"

[dependencies.failure]
version = "0.1.6"

[dependencies.failure_derive]
version = "0.1.6"

[dependencies.async-std]
version = "1.2.0"
features = ["attributes"]

[dependencies.async-trait]
version = "0.1.21"
