[package]
name = "bitreader_async"
version = "0.1.1"
authors = ["Ethan Spurlock <ethan@spurlock.io>"]
edition = "2018"
description = "A reader that extends BufReader to allow per bit reads asynchronously"
license = "MIT"
keywords = ["Read","Bit", "BufReader"]
repository = "https://github.com/vectorizer-labs/bitreader-async"

[dependencies.failure]
version = "0.1.6"

[dependencies.async-std]
version = "1.2.0"
features = ["attributes"]

[dependencies.async-trait]
version = "0.1.21"

[dependencies.bit_reverse]
version = "0.1.8"
